[LDAP-40] add support for java 17